updating the app

--- a/app.json
+++ b/app.json
@@ -1,11 +1,4 @@
 {
-  "expo": {
-    "name": "riskcov",
-    "slug": "riskcov",
-    "version": "1.0.0",
-    "assetBundlePatterns": [
-      "**/*"
-    ]
-  },
-  "name": "riskcov"
+  "name": "riskcov",
+  "displayName": "riskcov"
 }
